# civicrmapi

./: .gitignore  README.rst  install-docker-civicrm.sh  pyproject.toml  setup.py  tests.py  tox.ini
.github/workflows/: ci.yml  publish.yml  tests.yml
civapi/: __version__.py  civapi.py
civicrmapi/: __init__.py  __version__.py  api.py  base.py  civicrmapi.py  console.py  cv.py  errors.py  http.py  rest.py  tests.py  utils.py  v3.py  v4.py
civicrmapi/entities/: __init__.py  base.py
civicrmapi/v3/: __init__.py
civicrmapi/v4/: __init__.py  base.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
